# legion

./: .gitignore  AGENTS.md  CLAUDE.md  biome.json  hello.txt  opencode.json  package.json  pyproject.toml  test-leg-7.md
.changelog/: 516.md
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/skills/: AGENTS.md
.github/scripts/: verify-envoy-release-workflow.sh
.github/workflows/: envoy-and-contracts.yaml  pr-and-main.yaml  publish-envoy-plugin.yml  release-cli.yaml  release-envoy-and-plugin.yaml  release-envoy-listener.yaml  release-envoy-plugin.yaml  release-opencode-plugin.yaml  release.yaml
.legion/: architect.json  implement.json  plan.json  retro.json  review.json  test.json
.legion/tasks/: bg_0b0399465926b4004cd10048.json  bg_0bcb0989b18609bc17c28248.json  bg_0e6daabb3e39685ce169140f.json  bg_100328a88064342bd750fcf4.json  bg_1fbb32abb84eeac5a5be866b.json  bg_3e7ab0aa2138d9655ae68dc8.json  bg_403f7840423df57e532f58cd.json  bg_5dd2ec98e4bbac4fadc7a863.json  bg_62f84561ed5f82512b12177f.json  bg_63874c9319f50f9f4a1b6143.json  bg_6f372f1d3adc665b389d6cc1.json  bg_73920a7882316d8db92b22bb.json  bg_7bb4f607450549d4219edfcb.json  (+23 more)
.opencode/: package-lock.json
.opencode/skills/: AGENTS.md
docs/: design-principles.md
hooks/: hooks.json
scripts/: branch-protection.sh  sync-envoy-host.sh
tests/: conftest.py  test_auth.py  test_calculator.py  test_cli.py  test_daemon.py  test_echo.py  test_farewell.py  test_greeting.py  test_password_reset.py  test_session.py  test_session_naming.py  test_setup.py  test_short_id.py  test_state.py  test_tmux.py
(+362 files in other folders)
